--- a/gb/24/9/5/n14324905.md
+++ b/gb/24/9/5/n14324905.md
@@ -24,7 +24,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/15/n9844557.md#1" target="_blank">毛泽东诗词“蔑视祖宗 自认风流”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/9/n11172449.md#1" target="_blank">法轮功神奇民间心口相传 中共杜撰1400案例</a></li>
+<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/20/n10073567.md#1" target="_blank">中共教育投入与民国时期的教育投入</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/31/n11490640.md#1" target="_blank">来自摩尔多瓦的心声：道德是人类真正价值</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
