--- a/gb/25/8/14/n14573168.md
+++ b/gb/25/8/14/n14573168.md
@@ -27,7 +27,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/16/n10147841.md#1" target="_blank">袁斌：河南信阳姜寨村大饥荒时代的往事</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/24/n10997952.md#1" target="_blank">女儿获9万澳元奖学金 澳洲母女感恩法轮功</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/7/n9936116.md#1" target="_blank">林辉：误信周恩来  南开创始人郁郁而终</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/7/18/n8113015.md#1" target="_blank">融入东方智慧 西人健康顾问获提振</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
