--- a/gb/25/8/5/n14567383.md
+++ b/gb/25/8/5/n14567383.md
@@ -2,26 +2,24 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>江油抗争引关注 评论：中国处处埋“地雷”</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2025/08/id14567390-1ab72cfccaec84fbddc4ade1a9d391e3-600x400.png" />///image2=```diff
-- 2025年8月4日，四川江油少女遭霸凌事件，引发数千人自发到市政府抗议，当局出动大批警察镇压。（视频截图）
-```
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2025/08/id14567390-1ab72cfccaec84fbddc4ade1a9d391e3-600x400.png" />
 <h6>2025年8月4日，四川江油少女遭霸凌事件，引发数千人自发到市政府抗议，当局出动大批警察镇压。（视频截图）</h6>
 <hr>
 	<p>【大纪元2025年08月05日讯】（大纪元记者宁海钟、骆亚报导）近日四川江油市一名女孩遭遇霸凌，中共官方不作为引发民众大规模抗议。当局派大批特警镇压，双方发生冲突，大量抗议者遭暴力殴打和抓捕。事件引发海外观察家关注。有评论认为，民众的不满就像一颗颗地雷，随时可能被引爆。当局的镇压会进一步瓦解其政权的合法性，事件反映中共极端虚弱，人民抗争或是中国社会最大的变数。</p>
 <p>近日，江油市一名14岁女孩被同龄人带到未完工建筑内，被迫脱衣并遭到辱骂和群殴。施暴者近日将视频发到网上，引发公愤。</p>
 </p>
-<p><center><a title="江油抗争引关注 评论：中国处处埋“地雷”【 #听纪元 】| #大纪元新闻" loading="lazy" data2-src=""></a><a href="https://dmt6yqw0je6jw.cloudfront.net/S1qBHCAOkwZk"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-TW/embed/1hrjqrerh6b4QfZXpGtUOO5Nx18u1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
-<p><a title="四川江油市一名女生被多人凌霸。｜#中国新闻 新唐人大纪元联合频道" loading="lazy" data2-src=""></a><a href="https://dmt6yqw0je6jw.cloudfront.net/S1qBHCAOkwZk"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-TW/embed/1hrhda9ngbt4hnfcP9jbRoSw71ch1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
+<p><center><a title="江油抗争引关注 评论：中国处处埋“地雷”【 #听纪元 】| #大纪元新闻" loading="lazy" data2-src=""></a><a href="https://dmt6yqw0je6jw.cloudfront.net/P5nBHCAOkwZr"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-TW/embed/1hrjqrerh6b4QfZXpGtUOO5Nx18u1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
+<p><a title="四川江油市一名女生被多人凌霸。｜#中国新闻 新唐人大纪元联合频道" loading="lazy" data2-src=""></a><a href="https://dmt6yqw0je6jw.cloudfront.net/P5nBHCAOkwZr"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-TW/embed/1hrhda9ngbt4hnfcP9jbRoSw71ch1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
 <p>综合大纪元昨天（4日）采访报导及网络爆料，受害女孩的妈妈是聋哑人，女孩经常遭受霸凌。施暴者曾被带到派出所，但都因为“未成年”被很快释放，未受惩罚。这次视频曝光后，虽然受害者家属一再督促，当局仍拖延多日，根本不予理睬。有受访者爆料说，施暴者中有人是官二代。（<strong>先前报导：<span style="color: #0000ff;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/8/4/n14566922.md#1" target="_blank" rel="noopener">四川14岁女生惨遭霸凌 数千人抗议遭镇压</a></span></strong>）</p>
 <p>在舆论压力下，当地公安8月4日发了一个通报，只称受害者经鉴定仅受“轻微伤”，并称已对两名施暴者作出“治安处罚”，其余人员仅“批评教育”。当天，大量市民聚集到江油市政府，为受害女孩讨还公道。有受访者说，现场可能有几千人。被打学生的父母和舅舅也在现场，家长下跪，请政府解决问题。<br />
-<a title="8月4日，四川江油市被霸凌的女生父母给官员下跪，要求打人者出来道歉，给一个公道 。 ｜#中国新闻 新唐人大纪元联合频道" loading="lazy" data2-src=""></a><a href="https://dmt6yqw0je6jw.cloudfront.net/S1qBHCAOkwZk"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-TW/embed/1hrhoeuhg9h6vexa50fuYxgsO1291c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
+<a title="8月4日，四川江油市被霸凌的女生父母给官员下跪，要求打人者出来道歉，给一个公道 。 ｜#中国新闻 新唐人大纪元联合频道" loading="lazy" data2-src=""></a><a href="https://dmt6yqw0je6jw.cloudfront.net/P5nBHCAOkwZr"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-TW/embed/1hrhoeuhg9h6vexa50fuYxgsO1291c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
 <p>江油市当局最初还与民众沟通，并将抗议者带进政府礼堂对话。但随后绵阳市派来大批特警（估计逾千人）暴力镇压。江油市是绵阳市代管的一个县级市。</p>
 <p>有视频显示，在江油市政府门口，众多抗议市民被抓。官方当众将他们关进运猪车拉走。公安的暴行引发民众的反抗。晚间抗议民众继续聚集唱歌、呼喊口号，与公安对峙。当晚零时左右，当局开始暴力清场，人群向公安投掷石块、水瓶等杂物。现场至少数十名抗议者被抓。<br />
-<a title="四川江油市女中学被凌霸事件引起数千民众抗议，8月4日，大批民众聚集市政府抗议，当局调动大批警力进行暴力镇压，多名民众被抓。｜#中国新闻 新唐人大纪元联合频道" loading="lazy" data2-src=""></a><a href="https://dmt6yqw0je6jw.cloudfront.net/S1qBHCAOkwZk"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-TW/embed/1hrhe75pfpf6lF89tROh5k8OP1761c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
+<a title="四川江油市女中学被凌霸事件引起数千民众抗议，8月4日，大批民众聚集市政府抗议，当局调动大批警力进行暴力镇压，多名民众被抓。｜#中国新闻 新唐人大纪元联合频道" loading="lazy" data2-src=""></a><a href="https://dmt6yqw0je6jw.cloudfront.net/P5nBHCAOkwZr"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-TW/embed/1hrhe75pfpf6lF89tROh5k8OP1761c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
 <p>旅美政经观察人士秦鹏对大纪元表示，经过中共这么多年的打压，中国很多人其实对自己身边的这种事情是不管的，事不关己，高高挂起，甚至扶一个跌倒的老人，都不太愿意做。这次站出来的人跟该女生及其家人没什么关系，就是出于义愤，出于良知的驱动去指责官方，要求他们真正依法执法。但官方抓人、打人，把抗议者当作牲口一样的丢到运猪的车子里面，问题的性质又变了。</p>
 <p>秦鹏说，整个事件是不断发展演变。中共把不受其约束的这种抗议当作对它政权的威胁，所以才会武力镇压，但进一步激发了更多人的抗议，此时民众抗击的就是中共政权了。而当局的镇压反过来会进一步瓦解其政权的合法性，让更多的人看到中共已经失去了任何社会纠错能力。</p>
 <p>“（民众）经过了这么多年的洗脑恐吓、打压，结果不知道什么地方突然间会爆发出来这么大的一件事，这代表的这个政权脆弱到一定程度，一点火星，或者到了一点裂缝就因此崩塌，大家也不要奇怪。”他说。<br />
-<a title="8月4日晚，四川江油市霸凌事件再次升级，由于当地政府没有给民众一个说法，上千名民众持续在市政府抗议，当局调动大批警力进行暴力镇压，双方发生冲突，多名民众被抓，被打。｜#中国新闻 新唐人大纪元联合频道" loading="lazy" data2-src=""></a><a href="https://dmt6yqw0je6jw.cloudfront.net/S1qBHCAOkwZk"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-TW/embed/1hrhp1idngeaTkiScb0UtddIt1g21c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
+<a title="8月4日晚，四川江油市霸凌事件再次升级，由于当地政府没有给民众一个说法，上千名民众持续在市政府抗议，当局调动大批警力进行暴力镇压，双方发生冲突，多名民众被抓，被打。｜#中国新闻 新唐人大纪元联合频道" loading="lazy" data2-src=""></a><a href="https://dmt6yqw0je6jw.cloudfront.net/P5nBHCAOkwZr"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-TW/embed/1hrhp1idngeaTkiScb0UtddIt1g21c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
 <p>旅美时事评论员唐靖远对大纪元表示，大陆校园霸凌事件在这些年非常常见，甚至有的性质更加恶劣，有的人都被打成重伤，甚至是闹出人命，但是都没有像这次江油事件引发这么大的社会反响。这说明整个中共管制下的中国社会，已经成为一个非常危险的火药桶，遍地都是干柴，一个小火星都有可能会引发一场熊熊大火。</p>
 <p>知名民运人士王丹也在油管（YouTube）节目中表示，江油事件发展的速度和规模远远超出大多数人的预料。这不禁让人联想到2022年那场同样毫无预警爆发的白纸运动。他认为，原因在于这些年中国社会积累了太多不满——社会不公、官方权力滥用、制度冷漠，这些不满就像一颗颗地雷，随时可能被引爆。</p>
 <p>王丹说，江油抗争的民众并非职业抗争者，也不是民运人士。他们是普普通通的老百姓，他们的怒火并非源于对民主自由的追求或抽象的意识形态，而是来自于切身的不满——对社会不公的真切感受，甚至是一种“不能再沉默”的道德冲动。</p>
@@ -32,12 +30,12 @@
 <p>独立评论人士杜政今年初在台媒《上报》撰文披露，国内有个圈子，以商人为主，也有个别中层官员，甚至还有警察，他们通过安全软体组群议事，一有机会就向中国民众做民主启蒙。有些人参加白纸运动后出国了，但有些人在国内希望继续等待机会。在未来中国时局发生变化时，他们肯定会出来呼应。</p>
 <p>责任编辑：林琮文#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/20/n11397515.md#1">岳祺：警惕中共对付群体事件的两大阴招</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/9/28/n12436411.md#1">北京公安部信访接待室前发生群体事件</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/7/7/n13072708.md#1">【内幕】文件泄广州群体事件的内部记录</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/20/n13888314.md#1">【年终盘点】抗争与觉醒 2022群体事件</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/27/n10175949.md#1" target="_blank">袁斌：中共一波又一波的残忍内斗</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/11/n11582447.md#1" target="_blank">在中国经商 有这样一群可信赖的生意人</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/17/n10311201.md#1" target="_blank">心升：以史为镜看毛邪（下）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/6/14/n7998054.md#1" target="_blank">“如没有法轮功 我后半生一定在轮椅上度过”</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
