--- a/gb/24/11/2/n14363151.md
+++ b/gb/24/11/2/n14363151.md
@@ -3,12 +3,13 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>华为鸿蒙系统内藏多少不为人知的黑幕</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/06/GettyImages-1201968660-600x400.jpg" />
-<h6>华为手机已沦为中共监控工具。2021年6月，一名大陆网友说，华为手机升级鸿蒙系统2.0之后，手机中安装翻墙等应用软件会被有效识别，警方会第一时间通知删除。（ ISABEL INFANTES/AFP via Getty Images）
-</h6>
+<h6>华为手机已沦为中共监控工具。2021年6月，一名大陆网友说，华为手机升级鸿蒙系统2.0之后，手机中安装翻墙等应用软件会被有效识别，警方会第一时间通知删除。（ ISABEL INFANTES/AFP via Getty Images）</h6>
 <hr>
-	<p>【大纪元2024年11月03日讯】（大纪元记者宋唐、易如采访报导）在国际社会饱受争议的深圳华为公司，最近推出最新一款原生鸿蒙操作系统，引起广泛关注。人们再次对其所称的自主性、安全性及商业可行性提出质疑。华为鸿蒙系统背后，有多少不为人知的秘密？</p>
+	<p>【大纪元2024年11月03日讯】（大纪元记者宋唐、易如采访报导）在国际社会饱受争议的深圳华为公司，最近推出最新一款原生鸿蒙操作系统，引起广泛关注。人们再次对其所称的自主性、安全性及商业可行性提出质疑。华为鸿蒙系统背后，有多少不为人知的秘密？
+</p>
 <h2><strong>鸿蒙操作系统</strong><strong>完全自主？</strong></h2>
-<p>10月22日，华为推出了原生鸿蒙（又称星河版）操作系统（HarmonyOS NEXT），这是自2019年以来该操作系统的第五个版本。</p>
+<p>
+10月22日，华为推出了原生鸿蒙（又称星河版）操作系统（HarmonyOS NEXT），这是自2019年以来该操作系统的第五个版本。</p>
 <p>华为常务董事余承东称，此次发布的原生鸿蒙，实现了系统底座的全部自研，也被称为“纯血鸿蒙”。而此前的鸿蒙系统仍使用了部分AOSP开放源代码，兼容部分安卓应用软件。</p>
 <p>余承东还说，截至目前，鸿蒙在中国操作系统市场占据前两名，搭载鸿蒙操作系统的生态设备已超10亿台。</p>
 <p>中共央视则称，新的鸿蒙系统是“打破‘缺芯少魂’掣肘和欧美技术垄断的又一标志性成果”。</p>
@@ -22,11 +23,11 @@
 <p>对于搭载鸿蒙操作系统的生态设备已超10亿台的说法。牛保书认为，鸿蒙操作系统如果有10亿台设备上线用，肯定是在夸大了，就算最广统计口径，把历史上华为销售的所有手机、手表、平板都算上，也没有10亿台。</p>
 <p>根据大陆行业人士的分析，华为鸿蒙系统实际上有三种：一个手机上的鸿蒙OS；一种是嵌入式鸿蒙，主要用于电器类；第三种是TEE安全鸿蒙，用来处理敏感信息。大陆媒体报导，2020年已有美的、九阳、老板电器、海雀科技的设备搭载鸿蒙OS，而2021年，鸿蒙OS要覆盖40+主流品牌1亿台以上设备。</p>
 <p>牛保书表示，华为一直在有意的混淆鸿蒙是什么，导致很多普通人无法区分。电器产品上的鸿蒙操作系统意义不大，不会有人关注家电电器设备跑的系统是什么。</p>
-<p>“鸿蒙系统唯一重要的是手机和平板的装机量，只有鸿蒙纯血版的手机和平板的装机量够大，开发者才会来开发应用，这样才能构建生态系统。”</p>
+<p>“鸿蒙系统唯一重要的是手机和平板的装机量，只有鸿蒙纯血版的手机和平板的装机量够大，开发者才会来开发应用，这样才能构建生态系统。”
 <h2><strong>鸿蒙系统是中共信创计划一部分</strong></h2>
-<p>全球有数十亿部智能手机，但主流操作系统只有两大巨头：安卓和苹果iOS，微软、Firefox、亚马逊、三星、Ubuntu Touch 都尝试过进入移动市场，但都以失败告终。</p>
+全球有数十亿部智能手机，但主流操作系统只有两大巨头：安卓和苹果iOS，微软、Firefox、亚马逊、三星、Ubuntu Touch 都尝试过进入移动市场，但都以失败告终。</p>
 <p>技术史专家表示，推出一款新的移动操作系统是愚蠢之举，苹果和安卓拥有所有的应用程序、所有的硬件、所有的市场，它们联手榨干了创新之路。</p>
-<figure id="attachment_11299553" aria-describedby="caption-attachment-11299553" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/06/1906040518032378.jpg"><img decoding="async" class="size-medium_vertical wp-image-11299553" src="https://i.epochtimes.com/assets/uploads/2019/06/1906040518032378-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-11299553" class="wp-caption-text">苹果公司（Apple）在全球开发者大会（WWDC）发表内建深色模式的iOS 13作业系统。(Justin Sullivan/Getty Images)</figcaption></figure>
+<figure id="attachment_11299553" aria-describedby="caption-attachment-11299553" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/06/1906040518032378.jpg" rel="nofollow"><img decoding="async" class="size-medium_vertical wp-image-11299553" src="https://i.epochtimes.com/assets/uploads/2019/06/1906040518032378-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-11299553" class="wp-caption-text">苹果公司（Apple）在全球开发者大会（WWDC）发表内建深色模式的iOS 13作业系统。(Justin Sullivan/Getty Images)</figcaption></figure>
 <p>牛保书表示，鸿蒙不仅仅是商业上的愚蠢之举，在所有意义上都是愚蠢之举。如果处于技术与商业上的考虑，要做一款操作系统，应该去做VR（Apple Vision）领域的操作系统，VR现在还是一个可竞争的领域。</p>
 <p>“为什么要推出这款操作系统呢？就是中共它在预备万一国外封锁这些技术，不让你用了，到时候怎么办的问题？你可以认为这就是一个B计划，它根本就不是商业或技术上的考虑。”</p>
 <p>他说，“背后的逻辑跟龙芯是一样的，就是避免受制裁时的Plan B。根本就是政府不计成本、不计代价推下去的一个产物。”</p>
@@ -35,66 +36,60 @@
 <p>大陆专家指出，原生鸿蒙形式上是政府支持下的信创在手机领域的延续。同时，鉴于麒麟和统信等国产操作系统仍不够成熟，鸿蒙有望成为挑战并成为一个主流的PC操作系统。</p>
 <p>美国硅谷通讯网络资深工程师钟山对大纪元表示，华为在这个事情上酝酿已久，中共给了它这么长时间、费用和社会资源让它来做，这是一盘大棋，背后是一个叫做数字主权的话题，深层的意义是中美对抗。</p>
 <p>“中共对AI、大数据、云端这些东西都是心存芥蒂的，希望能自己掌握在手里，必须从根源上去搞定。比如说现在有阿里云、华为云，安卓操作系统也要被替换。”</p>
-<p>他说，鸿蒙这东西不是说难不难、做不做得出？关键是生态系统是不是买账？在这个领域华为下了这么大力气去做，出发点一定不是为了商业利益。</p>
+<p>他说，鸿蒙这东西不是说难不难、做不做得出？关键是生态系统是不是买账？在这个领域华为下了这么大力气去做，出发点一定不是为了商业利益。
 <h2><strong>商业可行性</strong></h2>
-<p>华为原生鸿蒙操作系统，将在全球市场面临挑战，包括苹果 iOS 和安卓的主导地位、安全问题以及持续的地缘政治紧张局势。</p>
+华为原生鸿蒙操作系统，将在全球市场面临挑战，包括苹果 iOS 和安卓的主导地位、安全问题以及持续的地缘政治紧张局势。</p>
 <p>虽然华为声称新操作系统原生支持 15,000 个应用程序，但仍然远远落后于支持数百万个应用程序的安卓和苹果iOS。</p>
 <p>此外开发人员还需要完全重写应用程序才能在华为的鸿蒙系统上运行，但由于华为在中国以外的市场份额很小，因此App商家几乎没有动力这样做，客户可能会选择其他品牌。</p>
-<figure id="attachment_14283063" aria-describedby="caption-attachment-14283063" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/07/id14283063-GettyImages-936083116-scaled.jpg"><img decoding="async" class="size-medium_vertical wp-image-14283063" src="https://i.epochtimes.com/assets/uploads/2024/07/id14283063-GettyImages-936083116-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14283063" class="wp-caption-text">一部智能手机上的Facebook、Instagram、Twitter和其它社交媒体应用程式。(CHANDAN KHANNA/AFP via Getty Images)</figcaption></figure>
+<figure id="attachment_14283063" aria-describedby="caption-attachment-14283063" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/07/id14283063-GettyImages-936083116-scaled.jpg" rel="nofollow"><img decoding="async" class="size-medium_vertical wp-image-14283063" src="https://i.epochtimes.com/assets/uploads/2024/07/id14283063-GettyImages-936083116-600x400.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14283063" class="wp-caption-text">一部智能手机上的Facebook、Instagram、Twitter和其它社交媒体应用程式。(CHANDAN KHANNA/AFP via Getty Images)</figcaption></figure>
 <p>牛保书表示，与安卓相比的话，鸿蒙没有优势，没人会给它开发营运应用。之前微软也推出了一款Windows Phone系统，有1%的市场份额，安卓当时都不会为它提供适配。</p>
 <p>他进一步解释说，鸿蒙系统虽然可用，但它生态系统不可能做起来，纯血鸿蒙的市场份额只有百分之零点零几，没有人给它开发应用。一款安卓应用从商业角度是不会去给鸿蒙做系统做适配的，它只会给安卓、IOS开发，不会给鸿蒙开发。但因为有（中共）政府在后面做推力，政府可能会强力推动比如说金山WPS、微信、支付宝做适配。</p>
 <p>牛保书表示，基本上它五年以后还是一个小众的操作系统，只有政府、国企可能会采购一些，普通人不会，就跟龙芯现在的市场份额一样，要去市场上买一个龙芯电脑，能买到。但没有人会去用，除非出于非商业的思维才会去买。比如政府或某些评测的人，可能会去买一台龙芯设备评测一下。</p>
-<p>钟山表示，在不自由的经济环境下，去强推鸿蒙生态的话，只能借助政府这种方式。“当年的绿坝植入，近些年强制安装反诈 ，强制安装健康码出行码，以及未来要强制学习强国考试及格才能找工作。”</p>
+<p>钟山表示，在不自由的经济环境下，去强推鸿蒙生态的话，只能借助政府这种方式。“当年的绿坝植入，近些年强制安装反诈 ，强制安装健康码出行码，以及未来要强制学习强国考试及格才能找工作。”
 <h2><strong>鸿蒙成一道新防火墙和监控工具</strong></h2>
-<p>早期版本的鸿蒙与安卓系统兼容，新一代纯血鸿蒙采取封闭战略，使得纯血鸿蒙是世界上最接近于排除美国技术的操作系统。再次表明中共在软件和硬件层面的国际标准进一步分裂，这种分裂始于 20 多年前北京首次尝试建设“防火墙”。</p>
+早期版本的鸿蒙与安卓系统兼容，新一代纯血鸿蒙采取封闭战略，使得纯血鸿蒙是世界上最接近于排除美国技术的操作系统。再次表明中共在软件和硬件层面的国际标准进一步分裂，这种分裂始于 20 多年前北京首次尝试建设“防火墙”。</p>
 <p>华为手机已沦为中共监控工具。2021年6月，一名大陆网友说，华为手机升级鸿蒙系统2.0之后，手机中安装翻墙等应用软件会被有效识别，警方会第一时间通知删除。</p>
 <p>钟山表示，华为鸿蒙肯定会沦为监控工具，不但会而且是前置的，它可以从你的流量包里直接分析。比如华为输入法或华为相册、华为智能盘等，它可以前置监控，都不等你去发帖，你都已经审查你了。因为手机本身有算力，不需要去联网，就相当于前置审查了。</p>
 <p>钟山建议，国内民众不要买鸿蒙机，不要买国产机，花一点小钱想办法买海外机，或买国内机刷一个海外的那个操作系统。</p>
 <p>牛保书表示，处于安全考虑的人是不会用鸿蒙系统的，华为的硬件设备，包括它的5G基站、交换机、路由器，美国、欧盟、英国都是禁止这些设备的。</p>
 <p>“如果安装了华为应用程序界面，等于是在中共政府面前裸奔了。中共之前发布密码的管理办法，政府只要想拿这些内容，政府都可以拿得到。”◇</p>
-<p>责任编辑：林妍#</p>
-<div class="related-article" style="display: block;"><span style="color: #000; font-weight: bold;">推荐阅读：</span></div>
-<ul class="related-posts" style="color: #0000ff; list-style: inside;">
-<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347505.md#1" target="_blank" rel="noopener">华为昇腾芯片和英伟达差多远 专家解析</a></span></li>
-<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/9/14/n14330541.md#1" target="_blank" rel="noopener">华为三折叠屏手机是自主研发？供应链被起底</a></span></li>
-<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14360385.md#1" target="_blank" rel="noopener">涉嫌与华为有关联 两芯片开发商遭台积电断供</a></span></li>
-<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/9/19/n14334722.md#1" target="_blank" rel="noopener">中共自砸脚 三因素令中美量子技术差距拉大</a></span></li>
-<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href="https://github.com/1992513/djy/blob/master/gb/19/10/23/n11607886.md#1" target="_blank" rel="noopener">华为副董事长：鸿蒙系统是官媒炒作出来的</a></span></li>
+<p>责任编辑：林妍#
+<div class="related-article"><span style="color: #000;font-weight: bold">推荐阅读：</span></div>
+<ul class="related-posts" style="color: #0000ff">
+<li><span style="font-weight: bold"><a style="color: #0000ff" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347505.md#1" target="_blank" rel="noopener nofollow noreferrer">华为昇腾芯片和英伟达差多远 专家解析</a></span></li>
+<li><span style="font-weight: bold"><a style="color: #0000ff" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/9/14/n14330541.md#1" target="_blank" rel="noopener nofollow noreferrer">华为三折叠屏手机是自主研发？供应链被起底</a></span></li>
+<li><span style="font-weight: bold"><a style="color: #0000ff" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14360385.md#1" target="_blank" rel="noopener nofollow noreferrer">涉嫌与华为有关联 两芯片开发商遭台积电断供</a></span></li>
+<li><span style="font-weight: bold"><a style="color: #0000ff" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/9/19/n14334722.md#1" target="_blank" rel="noopener nofollow noreferrer">中共自砸脚 三因素令中美量子技术差距拉大</a></span></li>
+<li><span style="font-weight: bold"><a style="color: #0000ff" href="https://github.com/1992513/djy/blob/master/gb/19/10/23/n11607886.md#1" target="_blank" rel="noopener nofollow noreferrer">华为副董事长：鸿蒙系统是官媒炒作出来的</a></span></li>
 </ul>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
-<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/4/n10889466.md#1" target="_blank">裴毅然：中共小知党（四）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/12/n11583426.md#1" target="_blank">悉尼女律师：修炼让我找到了人生意义</a></li>
+<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/7/n10835295.md#1" target="_blank">中华传统文化之叹——消逝的城墙（下）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/22/n10927324.md#1" target="_blank">跨国企业总经理修炼法轮功 受益无穷</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/17/n14532918.md#1">夏至之“至”表示什么意义？ 留意这节气宜忌过好夏至</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/30/n14237654.md#1">“牛鸣地裂”一场大地震冥冥中竟安排了三年</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14534051.md#1">【未解之谜】深海最新神秘发现 改写“生命起源”的认知？！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/15/n14531783.md#1">浮生行吟：想想“长跑”这件事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/10/n14528102.md#1">宁死不降共的李民彝将军以及在岳飞故里的一段抗战故事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/21/n14535894.md#1">【车评】敞蓬良驹 2025 Mazda MX-5 Miata Club</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/21/n14535998.md#1">【时政春秋】川普两周期限 最后和平计划</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/21/n14536122.md#1">【马克时空】美军加速赴中东 伊朗顽强导弹反击</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/20/n14535495.md#1">中共禁酒令引发骨牌效应 多行业同步受挫</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/19/n14535067.md#1">MIT研究发现ChatGPT损害人的思考能力</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/20/n14535433.md#1">罕见新星亮度突增400万倍 在北美肉眼可见</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/20/n14535224.md#1">《侏罗纪世界：重生》英国首映 观众评价出炉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14534319.md#1">林志玲弃车“街头狂奔” 背后原因曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/20/n14535401.md#1">冈恩删除《超人》预告片里受批评的镜头</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/21/n14536088.md#1">2025首尔歌谣大奖揭晓 女团i-dle荣获大奖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/19/n14534637.md#1">《复仇者5》赴英拍摄计划 暗示哨兵的故事线</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/19/n14534429.md#1">在夏天将瓢虫引进花园 可以帮你解决大问题</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/20/n14535227.md#1">灰尘在夏天容易堆积 这招可让家里清洁溜溜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/20/n14535369.md#1">这5种生活习惯会悄悄地伤肝 戒掉为上策</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/17/n14532801.md#1">“血管清道夫”黑木耳 三道药膳降三高</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/13/n14530763.md#1">研究：人们为何偏爱最不健康的食物</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/11/2/n14363151.htm">华为鸿蒙系统内藏多少不为人知的黑幕</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/11/2/n14363151.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
